<resources>
    <string name="app_name">welcome wardah</string>
    <string name="welcomepage_name">hello word</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="enter_url">Enter URL</string>
    <string name="launch">launch</string>
    <string name="enter_phone_no">Enter Phone no</string>
    <string name="call">call</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="map">map</string>
    <string name="view_contacts">View Contacts</string>
    <string name="send_email">send Email</string>
    <string name="send_sms">send SMS</string>

    <string name="transition_string">hello</string>


    <string name="label">REPLAY</string>
    <string name="reply_label">REPLAY</string>
    <string name="title_activity_map_sample">Map</string>


    <string name="welcome_to_ita">welcome to ITA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Terms_and_Condition">TEMPLATE WEBSITE TERMS AND CONDITIONS</string>

    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!--app-->
    <string name="hello">Hello</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="button">button</string>
    <string name="text">
        The domestic cat (Latin: Felis catus) is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are often valued by humans for companionship and for their ability to hunt vermin.
    </string>


</resources>
